# Enhanced-Transparent-Data-Preprocessing-for-Machine-Learning

./: README.md  capstone14_4320914f-f117-4dc7-adc3-17c2fead9d29.json  capstone14_ad187990-6b52-4602-8329-e3c6e5a1c038.json  capstone14_b5ddec62-4ae1-467f-b99e-57dc4b8e6244.json  data_diff.json  data_profile.json  pyproject.toml
capstone14/: __init__.py
capstone14/data_logging/: functions.py  pipeline_run.py
capstone14/data_profiling/: correlation.py
capstone14/db/: db_functions.py
capstone14/ui/: add_process_step.py  data_trans_type.py  display_model_results_dtree.py  main_win.py  modified_main_win_with_addrawdata_showprofile  modified_main_win_with_legend.py  profile_generation.py
examples/: dash_app.py  data_logging.py  data_profile_generation.py  hawk_171fa8b7-74b2-4367-8f31-8fb7264864a0.json  hawk_689e0c44-8afc-4e64-9053-6aa5d06d7ec8.json  hawk_954cc84e-cfe8-46af-82ef-181719371088.json
server/api/: main.py
